修改测试应用

--- a/templates/message_form.html
+++ b/templates/message_form.html
@@ -15,7 +15,7 @@
     <img src="/static/image/ll.jpg"/>
     <label>
         <span>姓名 :</span>
-        <input id="name" type="text" name="name" class="error" placeholder="请输入您的姓名"/>
+        <input id="name" type="text" value="{{user_manage.name}}" name="name" class="error" placeholder="请输入您的姓名"/>
         <div class="error-msg"></div>
     </label>
 
